--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,5 +29,5 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: ML Workflow
         run: |
-          pip3 install -r requirements.txt
+          pip3 install -r ./app/requirements.txt
           echo Finished installing dependencies.
