pushed image to docker hub

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -13,3 +13,11 @@ RUN pip3 install -r requirements.txt
 EXPOSE 8080
 
 CMD [ "python3", "./app/app.py"]
+
+# how to push image to docker hub:
+# docker tag <local-image>:<tag name> mdo6180/<repo>:<tag name>
+# docker push mdo6180/<repo>:<tag name>
+
+# example:
+# docker tag mlops_app:latest mdo6180/learning:latest
+# docker push mdo6180/learning:latest
