slight changes to dockerfile and main.yml

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM dvcorg/cml-py3 as base
+FROM dvcorg/cml-py3:latest as base
 WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 COPY . ./app
