trying new github action

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,14 +1,13 @@
 # syntax=docker/dockerfile:1
 
-FROM dvcorg/cml-py3:latest as base
+FROM python:3.8-slim-buster
+
 WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 COPY . ./app
 
-FROM python:3.8-slim-buster
-COPY --from=base /app /app
-WORKDIR /app
-RUN pip3 install -r requirements.txt 
+RUN pip install --upgrade pip
+RUN pip install --no-cache-dir --upgrade -r requirements.txt 
 
 EXPOSE 8080
 
