--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      
+
       - uses: iterative/setup-cml@v1
 
       - uses: actions/setup-python@v2
@@ -40,4 +40,6 @@ jobs:
           echo Finished installing dependencies.
 
           echo "## Data Visualization Plots" > report.md
+          echo report.md is created
+
           cml-send-comment report.md
