--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,16 +20,12 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    container: docker://dvcorg/cml-py3:latest
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      - uses: iterative/setup-cml@v1
-
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
 
       # Runs a set of commands using the runners shell
       - name: ML Workflow
