--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,8 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: ML Workflow
+        env:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
         run: |
           pip3 install -r ./app/requirements.txt
           echo Finished installing dependencies.
