tried installing cml in docker image

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,14 +1,20 @@
 # syntax=docker/dockerfile:1
 
-FROM dvcorg/cml-py3:latest 
+FROM nikolaik/python-nodejs:latest
 
 WORKDIR /app
+
 COPY requirements.txt /app/requirements.txt
-RUN pip3 install -r requirements.txt 
+RUN pip3 install -r requirements.txt
+
+RUN npm i -g @dvcorg/cml
+
+COPY . ./app
 
 EXPOSE 8080
 
 CMD [ "python3", "./app/app.py"]
+
 
 # how to push image to docker hub:
 # docker tag <local-image>:<tag name> mdo6180/<repo>:<tag name>
