--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,33 +15,11 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    container: docker://mdo6180/learning:latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  deploy-runner:
+    runs-on: [self-hosted,cml-runner]
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
       - uses: iterative/setup-cml@v1
-
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-
-      # Runs a set of commands using the runners shell
-      - name: ML Workflow
-        env:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          pip3 install -r ./app/requirements.txt
-          echo Finished installing dependencies.
-
-          echo "## Data Visualization Plots" > report.md
-          echo report.md is created
-
-          cml-send-comment report.md
+      - uses: actions/checkout@v2
+      - name: "Deploy runner on EC2"
+        shell: bash
+          
