--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: "Deploy runner on EC2"
         shell: bash
+        run: |
+          # Publish report with CML
+          cat metrics.txt > report.md
+          cml-send-comment report.md
           
