new self-hosted runner

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,14 +16,14 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   deploy-runner:
-    runs-on: [self-hosted,cml-runner]
+    runs-on: [self-hosted]
     steps:
       - uses: iterative/setup-cml@v1
       - uses: actions/checkout@v2
       - name: "first self-hosted runner"
         shell: bash
         env:
-          repo_token: ${{ secrets.mlops }}
+          repo_token: ${{ secrets.PERSONAL_ACCESS_TOKENS }}
         run: |
           # Publish report with CML
           echo "## Data Visualization Plots" > report.md
